Bug 168842 - Bug 168709: Similar Bug Unfixed in Another Location
Summary: Bug 168709: Similar Bug Unfixed in Another Location
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
26.2.0.0 alpha0+ master
Hardware: All All
: medium normal
Assignee: BogdanB
URL:
Whiteboard: target:26.2.0 target:25.8.3
Keywords: difficultyBeginner, easyHack, skillUI
Depends on:
Blocks:
 
Reported: 2025-10-14 05:23 UTC by Takenori Yasuda
Modified: 2025-10-20 07:47 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Takenori Yasuda 2025-10-14 05:23:45 UTC
Description:
A bug of the same type as Bug 168709 remains in the Paragraph Style settings of Writer, Impress, and Draw.

Now that Bug 168709 has been fixed, I think it would be good to fix all of these as well.

Steps to Reproduce:
1. Menu -> Format -> Paragraph
2-1. Indents & Spacing -> Indent
2-2. Indents & Spacing -> Spacing
3. Input values, e.g., 25 mm and 2.5 cm.

Actual Results:
25 mm -> 71 pt
2.5 cm -> 85 pt

Expected Results:
25 mm -> 70.9 pt
2.5 cm -> 70.9 pt


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: d60ff8c8bd4e3ebf8f84f53448ead3c838332ea9
CPU threads: 8; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Raster; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: CL threaded Jumbo
Comment 1 Mike Kaganski 2025-10-14 05:53:54 UTC
Code pointer: the UI files need something similar to 4c9a19587ffe26606f7664ae6272767b20c32609
Comment 2 BogdanB 2025-10-14 17:13:25 UTC
Working on
Menu -> Format -> Paragraph
Comment 3 BogdanB 2025-10-14 18:05:12 UTC Comment hidden (obsolete)
Comment 4 BogdanB 2025-10-14 18:21:45 UTC
It is working well, I build localy and everything is fine.
https://gerrit.libreoffice.org/c/core/+/192405
Comment 5 Commit Notification 2025-10-15 04:05:44 UTC
Bogdan Buzea committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/75b30f1d107f45aebbf9a0811b9d40f4b2bafdce

tdf#168842 Issue entering paragraph values in cm, when default is in points

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 BogdanB 2025-10-15 04:38:08 UTC
It's solved also in Writer, Impress and Draw. Common code.
Comment 7 Commit Notification 2025-10-15 15:07:22 UTC
Bogdan Buzea committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/6dacd3417222825e3bdfb1420fafcd4b2abe4eb5

tdf#168842 Issue entering paragraph values in cm, when default is in points

It will be available in 25.8.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2025-10-18 16:49:40 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f6df8fc72f9bcab541554cd98859304f34d19f21

Related: tdf#168842 digits in GtkSpinButton, lost in SRC -> UI conversion

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2025-10-19 08:02:59 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/d0b3b1086cf6fe7c8160bd08b69cf375b44a6b88

Related: tdf#168842 digits in GtkSpinButton, lost in SRC -> UI conversion

It will be available in 25.8.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2025-10-19 09:19:17 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d22f90fec0fb2375ac336af0f696b6703afaa310

Related: tdf#168842 Don't truncate source precision in vcl::TextToValue

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2025-10-20 07:47:44 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/2b8c4cdb286102a848a711259089ba87ef08d9ee

Related: tdf#168842 Don't truncate source precision in vcl::TextToValue

It will be available in 25.8.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.